# sem-pr

./: CMakeLists.txt  main.cpp
src/core/dao/: filereader.h
src/core/model/: circle.h  figure.h  parallelogram.h  point.h  rectangle.h  triangle.h
src/core/utils/: vector.h
